--- a/src/docs/_static/theme_overrides.css
+++ b/src/docs/_static/theme_overrides.css
@@ -1,6 +1,6 @@
 /* From https://rackerlabs.github.io/docs-rackspace/tools/rtd-tables.html */
 /* override table width restrictions */
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 1000px) {
 
   .wy-table-responsive table td {
      /* !important prevents the common CSS stylesheets from overriding
@@ -11,4 +11,8 @@
   .wy-table-responsive {
      overflow: visible !important;
   }
+}
+
+.wy-nav-content {
+  max-width: 1000px !important;
 }
